--- a/03.Video/ecommerce-app/src/index.html
+++ b/03.Video/ecommerce-app/src/index.html
@@ -6,7 +6,7 @@
   <title>eShop.com</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="ecommerce.ico">
 </head>
 
 <body>
